<resources>
    <string name="app_name">Envíos Rápidos MX</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!---STRINGS DE REPARTIDOR-->

    <!---Bottom NavigationBar Repartidor-->
    <string name="op_mispendientes_repartidor">Pendientes</string>
    <string name="op_misnotificacionees_repartidor">Notificar</string>
    <string name="op_miscalificaciones_repartidor">Calificaciones</string>

    <!---NavigationDrawer Repartidor-->
    <string name="op_inicio_repartidor">Inicio</string>
    <string name="op_pendientes_repartidor">Pendientes</string>
    <string name="op_notificar_repartidor">Notificar</string>
    <string name="op_cerrarSesion_repartidor">Cerrar sesión</string>
    <string name="fab_add_description">Agregar nuevo elemento</string>

    <!---Login Repartidor-->
    <string name="txtLoginR">Login de Repartidor</string>
    <string name="btnLoginR">Ingresar</string>
    <string name="tvRegistrarR">Registrarme</string>
    <string name="etEmailR">Email</string>
    <string name="etPasswordR">Password</string>
    <string name="txtNoCuentaR">¿No tienes cuenta?</string>

    <!---Registro Repartidor-->
    <string name="txtRegistroR">Registro de Repartidor</string>
    <string name="etNombresR">Nombre(s)</string>
    <string name="etApellidosR">Apellido(s)</string>
    <string name="etTelefonoR">Teléfono</string>
    <string name="etRPassword">Confirmar password</string>
    <string name="btnRegistrarR">Registrarme</string>

    <!---Fragments de inicio del Repartidor-->
    <string name="img_repartidor_desc">Imagen del repartidor</string>
    <string name="btnCompletado">Entrega Completada</string>


    <!---STRINGS DE CLIENTE-->


    <!---NavigationDrawer Cliente-->
    <string name="op_inicio_cliente">Inicio</string>
    <string name="op_cerrarSesion_cliente">Cerrar Sesión</string>


    <!---Bottom NavigationBar Cliente-->
    <string name="op_registro_cliente">Registrar Envío</string>
    <string name="op_historial_cliente">Historial de Envíos</string>
    <string name="op_calificar_cliente">Calificar Envío</string>

    <!---Nav header Cliente-->
    <string name="bienvenida">Bienvenido</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!---Login Cliente-->
    <string name="txtLoginC">Login de Cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="tvRegistrarC">Registrarme</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="txtNoCuenta">¿No tienes cuenta?</string>

    <!---Registro Cliente-->
    <string name="txtRegistroC">Registro de cliente</string>
    <string name="etNombresC">Nombre(s)</string>
    <string name="etApellidosC">Apellido(s)</string>
    <string name="etTelefonoC">Teléfono</string>
    <string name="etCPassword">Confirmar password</string>
    <string name="btnRegistrarC">Registrarme</string>

    <!---Tipos de usuarios-->
    <string name="tipoCliente">Soy Cliente</string>
    <string name="tipoRepartidor">Soy Repartidor</string>
    <string name="tipoAdmin">Soy Administrador</string>

    <!---Fragment para registro de un envío-->
    <string name="titulo_registroEnvio">Registrar envío nuevo</string>
    <string name="datosCliente">Datos del remitente</string>
    <string name="btnVerEntrega">Ver Envío</string>

    <string name="etNombreCompleto">Nombre Completo</string>
    <!--<string name="etTelefonoC">Teléfono</string>-->
    <!--<string name="etEmail">Email</string>-->

    <string name="datosDestinatario">Datos del Destinatario</string>
    <string name="datosRecoleccion">Datos de Recolección</string>
    <string name="etCalle">Calle</string>
    <string name="etNoCasa">No.</string>
    <string name="etColonia">Colonia</string>
    <string name="etEstado">Estado</string>
    <string name="etCodigoPostal">Código Postal</string>


    <string name="datosPaquete">Datos del Paquete</string>
    <string name="etDescripcionContenido">Descripción del contenido</string>
    <string name="etQtyPiezas">Cantidad de piezas</string>
    <string name="etAncho">Ancho</string>
    <string name="etLargo">Largo</string>
    <string name="etAlto">Altura</string>
    <string name="etPeso">Peso</string>
    <string name="btnRegistrarEnvio">Registrar Envío</string>

    <!---Array de spinners-->
    <string-array name="opciones_peso">
        <item>Seleccionar</item>
        <item>0.5 kg</item>
        <item>1 kg</item>
        <item>2 kg</item>
        <item>5 kg</item>
    </string-array>

    <string-array name="opciones_piezas">
        <item>Seleccionar</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="btnCalificar">Calificación de Envío</string>
    <string name="etID">ID de Envío</string>
    <string name="tituloCalificacion">Calificación de Envío</string>
    <string name="nosInteresa">¡Nos interesa su opinión!</string>
    <string name="datosEnvio">Datos del Envío</string>
    <string name="comentarios">Comentarios</string>
    <string name="calificacion">Calificar</string>

    <!---Detalle Envio Activity-->
    <string name="detalleEnvio">Detalle del envío</string>
    <string name="nombreCompletoRemitente">Nombre Remitente</string>
    <string name="nombreCompletoDestinatario">Nombre Destinatario</string>
    <string name="direccionCompletaRemitente">Dirección Remitente</string>
    <string name="direccionCompletaDestinatario">Dirección Destinatario</string>
    <string name="descripcionCompletaPaquete">Descripción de Paquete</string>
    <string name="dimencionCompletaPaquete">Dimensiones de paquete</string>
    <string name="pesoCompletoPaquete">Peso de paquete</string>
    <string name="piezasCompletasPaquete">Piezas del Paquete</string>


    <!---STRINGS DE ADMINISTRADOR-->

    <!---Bottom NavigationBar administrador-->
    <string name="op_misrepartidores_administrador">lista de repartidores</string>
    <string name="op_misenvios_administrador">lista envios</string>
    <string name="op_misclientes_administrador">lista clientes</string>

    <!---NavigationDrawer Repartidor-->
    <string name="op_inicio_administrador">Inicio</string>
    <string name="op_listarepartidores_administrador">lista de repartidores</string>
    <string name="op_listaenvios_administrador">lista de envios</string>
    <string name="op_listaclientes_administrador">lista de clientes</string>
    <string name="op_cerrarSesion_administrador">Cerrar sesión</string>


    <!---Login Repartidor-->
    <string name="txtLoginA">Login de Administrador</string>
    <string name="btnLoginA">Ingresar</string>
    <string name="tvRegistrarA">Registrarme</string>
    <string name="etEmailA">Email</string>
    <string name="etPasswordA">Password</string>
    <string name="txtNoCuentaA">¿No tienes cuenta?</string>


    <!---Registro Repartidor-->
    <string name="txtRegistroA">Registro de Administrador</string>
    <string name="etNombresA">Nombre(s)</string>
    <string name="etApellidosA">Apellido(s)</string>
    <string name="etTelefonoA">Teléfono</string>
    <string name="etAPassword">Confirmar password</string>
    <string name="btnRegistrarA">Registrarme</string>



</resources>