<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.CalificacionEnvioActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="80dp">

        <TextView
            android:text="@string/detalleEnvio"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/datosEnvio"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ID del envío-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/etID"
                android:id="@+id/etIdEnvio"
                android:enabled="false"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Nombre de remitente-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etNombreR"
                android:hint="@string/nombreCompletoRemitente"
                android:enabled="false"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Dirección de remitente-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etDireccionR"
                android:hint="@string/direccionCompletaRemitente"
                android:enabled="false"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Nombre de destinatario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etNombreD"
                android:hint="@string/nombreCompletoDestinatario"
                android:enabled="false"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Dirección de destinatario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etDireccionD"
                android:enabled="false"
                android:layout_gravity="center"
                android:hint="@string/direccionCompletaDestinatario"
                android:layout_marginTop="15dp"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/lbDetalles"
            android:text="@string/datosPaquete"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Ancho, largo y alto de paquete-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:weightSum="3">

            <!--Ancho-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp">
                <EditText
                    android:id="@+id/etAncho"
                    android:hint="@string/etAncho"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Largo-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp">
                <EditText
                    android:id="@+id/etLargo"
                    android:hint="@string/etLargo"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!--Alto-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp">
                <EditText
                    android:id="@+id/etAlto"
                    android:hint="@string/etAlto"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!--Linear Layout para PESO Y PIEZAS-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp">
                <EditText
                    android:id="@+id/etPeso"
                    android:hint="@string/pesoCompletoPaquete"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp">
                <EditText
                    android:id="@+id/etQtyPzas"
                    android:hint="@string/piezasCompletasPaquete"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Descipcion del paquete-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etDescripcion"
                android:hint="@string/descripcionCompletaPaquete"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Boton para ver calificacion-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calificacion"
            android:layout_marginTop="15dp"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>