<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.LoginClienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:text="@string/txtLoginC"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/login_clientes"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <!--Ingresar email-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etEmail"
                android:hint="@string/etEmail"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/email"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Ingresar password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/etPassword"
                android:hint="@string/etPassword"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--Boton ingresar-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginC"
            android:text="@string/btnLoginC"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:cornerRadius="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/txtNoCuenta"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvRegistrarC"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/orange"
            android:text="@string/tvRegistrarC"
            android:layout_gravity="end"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>