<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.CalificacionEnvioActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="80dp">

        <TextView
            android:text="@string/tituloCalificacion"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/datosEnvio"
            android:layout_gravity="start"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--ID del envío-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/etID"
                android:id="@+id/etIdEnvio"
                android:enabled="false"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Dirección de remitente-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etDireccionR"
                android:hint="@string/etCalle"
                android:enabled="false"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>


        <!--Dirección de destinatario-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/etDireccionD"
                android:enabled="false"
                android:layout_gravity="center"
                android:hint="@string/etCalle"
                android:layout_marginTop="15dp"
                android:inputType="textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/nosInteresa"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/ComentariosEnvio"
                android:hint="@string/comentarios"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:text="@string/calificacion"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1.0" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>