<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Repartidor.RegistroRepartidor">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/txtRegistroR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/registro"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


        <!--Nombres-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNombresR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/names"
                android:drawablePadding="5dp"
                android:hint="@string/etNombresR"
                android:inputType="textPersonName|textCapWords" />

        </com.google.android.material.textfield.TextInputLayout>


        <!--Apellidos-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etApellidosR"
                android:hint="@string/etApellidosR"
                android:drawableStart="@drawable/names"
                android:drawablePadding="5dp"
                android:inputType="textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Teléfono-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etTelefonoR"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="5dp"
                android:hint="@string/etTelefonoR"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Correo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmailR"
                android:hint="@string/etEmailR"
                android:drawableStart="@drawable/email"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPasswordR"
                android:hint="@string/etPasswordR"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Confirm Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etRPassword"
                android:hint="@string/etRPassword"
                android:drawableStart="@drawable/password"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Botón de registrar-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarR"
            android:text="@string/btnRegistrarR"
            android:textAllCaps="true"
            app:cornerRadius="8dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>